Fix spacing issues with jump button

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -609,7 +609,6 @@ img.data-thumb {
 
 .full_record_top {
   border-bottom: 1px solid $light-gray;
-  padding-bottom: 25px;
 
   .collinfo {
     width: 100%;
